# moveit_simultaneous_motions_demo

./: .gitmodules  .setup_assistant  CMakeLists.txt  LICENSE  README.md  package.xml
config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  panda.srdf  ros_controllers.yaml
docker/: Dockerfile  docker-compose.yml  launch_container.sh
launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  panda_moveit_controller_manager.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch
panda_dual_arm_demo/: CMakeLists.txt  package.xml
panda_dual_arm_demo/config/: joint_state_publisher.yaml
panda_dual_arm_demo/launch/: moveit_cpp.launch  moveit_cpp.rviz  moveit_cpp_node.launch
panda_dual_arm_demo/script/: move_group_demo.py  trackik_test.py
panda_dual_arm_demo/src/: moveit_demo.cpp  moveit_demo_simple.cpp  simple_path.cpp  simple_path_move_group.cpp  simple_path_moveitcpp.cpp  simple_path_simultaneous.cpp  tmp.txt
scripts/: demo.py
