<?xml version="1.0"?>
<package format="2">
  <name>panda_dual_arm_demo</name>
  <version>0.1.0</version>
  <description>The dual_arm_demo package</description>

  <maintainer email="cristianbehe@gmail.com">Cristian C. Beltran-Hernandez</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_fake_controller_manager</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  
  <build_depend>roscpp</build_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>

</package>
